# libreeb

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Readme.md  devenv.nix  devenv.yaml  justfile  pyproject.toml
benches/: benchmark.rs
openeb/: CMakeLists.txt
openeb/src/: bench_evt3.cpp  main.cpp
src/: bench_evt3.rs  ebtui.rs  evt2.rs  evt2_1.rs  evt3.rs  evt_reader.rs  header.rs  lib.rs  macros.rs  main.rs
