cargo-features = ["profile-rustflags"]

[package]
name = "libreeb"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
enum_dispatch = "0.3.13"
itertools = "0.13.0"
pico-args = "0.5.0"
ratatui = "0.29.0"
stackvector = "1.1.1"
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["formatting"] }
zerocopy = {version = "0.8.25", features = ["derive", "simd-nightly"] }

[dev-dependencies]
xxhash-rust = {version ="0.8.3", features = ["xxh64"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
rustflags = ["-C", "target-cpu=native"]
panic = "abort"
debug = true

[lib]
name = "libreeb"
path = "src/lib.rs"

[[bin]]
name = "eb_viewer"
path = "src/main.rs"

[[bin]]
name = "bench_evt3"
path = "src/bench_evt3.rs"
