# cargo-features = ["profile-rustflags"]

[package]
name = "libreeb"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
enum_dispatch = "0.3.13"
facet = "0.27.15"
facet-pretty = "0.23.22"
itertools = "0.13.0"
pico-args = "0.5.0"
rand = "0.9.1"
ratatui = "0.29.0"
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["formatting"] }
zerocopy = { version = "0.8.25", features = ["derive", "simd"] }

[dev-dependencies]
xxhash-rust = { version = "0.8.3", features = ["xxh64"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
# rustflags = ["-C", "target-cpu=native"]
panic = "abort"
debug = true
strip = false

[lib]
name = "libreeb"
path = "src/lib.rs"
# crate-type = ["cdylib"]
crate-type = ["rlib", "cdylib"]
[[bin]]
name = "eb_viewer"
path = "src/main.rs"

[[bin]]
name = "bench_evt3"
path = "src/bench_evt3.rs"
panic = "abort"

[dependencies.pyo3]
version = "0.24.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
