[project]
name = "libreeb"
dynamic = ["version"]
description = "Event-data decoding library"
authors = [{ name = "Thibaut Vercueil", email = "thibaut.vercueil@pm.me" }]
readme = "Readme.md"
requires-python = ">=3.10,<3.13"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
